Fix #6363 "Readonly TOC is too narrow"

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-orbeon.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-orbeon.less
@@ -349,6 +349,7 @@ body.orbeon { background-color: @frBackground }
             overflow: hidden;
             text-overflow: ellipsis;
             padding: 3px 0;
+            white-space: nowrap;
         }
     }
 
